--- a/templetes/views/about.hbs
+++ b/templetes/views/about.hbs
@@ -10,6 +10,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This site is created by Omar Aburish . It uses darkSky API</p>
             <img src="/img/robot.png" alt="robot" class="portrait">
         </div>
         
